--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/emailmessages/main.go"
+            "program": "${workspaceFolder}/cmd/emailmessages/main.go",
+            "env": {"PORT":8080,"DBUSERNAME":"cassandra","DBPASSWORD":"cassandra"}
         }
     ]
 }
