--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}/cmd/emailmessages/main.go",
-            "env": {"PORT":8080,"DBUSERNAME":"cassandra","DBPASSWORD":"cassandra"}
+            "env": {"PORT":8080,"DBUSERNAME":"cassandra","DBPASSWORD":"cassandra", "KEYSPACE":"em"}
         }
     ]
 }
